# open-optical-gating

./: .gitignore  .gitmodules  .realTimeSync.py.swp  .stage_control_functions.py.swp  .timebox.py.swo  .timebox.py.swp  Overview.txt  PiCamV2 Cage Plate Final ADJUSTED.stl  PiCamV2 Cage Plate Final.scad  Pipfile  README.md  YUVLumaAnalysis.py  camera.py  data.txt  frame_rate_test.py  getPeriod.py  gpio_trigger.c  helper.py  jpegcap.py  jt notes on cli code.rtf  jt_notes.md  laser_and_camera_test.py  longTermUpdating.py  mode_plot.py  opencvcap.py  pyproject.toml  realTimeSync.py  requirements.txt  settings.json  setup.py  setuptools_setup.py  stage_control_functions.py  stage_test.py  timebox.py  vidcap.sh  webapp.py
SPIM Emulator/jmtaylor-py_sad_correlation-e4068885081d/: .gitignore  .gitmodules  j_py_sad_correlation.cpp  j_py_sad_correlation_test.py  setup.py
SPIM Emulator/jmtaylor-py_sad_correlation-e4068885081d/.ipynb_checkpoints/: test_sad_grid-checkpoint.py
SPIM Emulator/jmtaylor-py_sad_correlation-e4068885081d/common/: BoundsRect.h  CocoaProgressWindow.h  CocoaProgressWindow.mm  DTSQTUtilities.cpp  DTSQTUtilities.h  DebugPrintf_OSX.mm  DictionaryReadingExtensions.h  DictionaryReadingExtensions.mm  GeometryObjects.h  GeometryObjects.mm  GeometryObjectsC.h  IWTParms.h  InvertMatrix.cpp  InvertMatrix.h  InvertMatrix_gsl.cpp  MIPProcessing.h  MIPProcessing.mm  NSPointArithmetic.h  ObjectPool.h  PIVImageWindow.h  PIVImageWindow.mm  ProgressBar.cpp  ProgressBar.h  ProgressPanel.xib  ProgressPanelIndeterminate.xib  ProgressWindow.cpp  ProgressWindow.h  ProgressWindow.xib  Signposts.h  VectorFunctions.h  VectorTypes.h  WorkThreads.h  WorkThreadsLite.cpp  WorkThreadsLite.h  jAlias.h  jAlias.mm  jApplication.h  jApplication.mm  jAssert.cpp  jAssert.h  (+51 more)
SPIM Emulator/jmtaylor-py_sad_correlation-e4068885081d/common/Obsolete/: Fitting.cpp  Fitting.h  LinkedList.cpp  LinkedList.h  SetValueButton.h  SetValueButton.mm  WeakWindowControllerReference.h  WeakWindowControllerReference.mm  jImageUtils.cpp  jImageUtils.h  jMovieBuilder_CarbonStub.cpp  jMovieBuilder_old.cpp  jProgressWindow.h  jProgressWindow.mm
SPIM Emulator/jmtaylor-py_sad_correlation-e4068885081d/common/Python/Python/: Python.1
c_gpio_pins/: fastpinsmodule.c  gpio_trigger.c  makefile  setup.py
examples/: default_settings.json  default_settings_with_stages.json  example_data_settings.json
fastpins/: fastpins_test.py  fastpinsmodule.c  gpio_test
fastpins/wiringPi-36fb7f1/wiringPi/: wiringPi.c
j_postacquisition/: Untitled0_py2.ipynb  Untitled0_py3.ipynb  accountForDrift.py  analyze_alex_compressive_script.py  analyze_boe_draft_dataset_script.py  analyze_compressive.py  analyze_dataset.py  analyze_durham_hispeed_script.py  analyze_heart_belly_scan.py  analyze_heart_plane.py  analyze_heart_plane_em_cam.py  analyze_junction_em_cam.py  analyze_phase_script.py  analyze_sync_test_dataset.py  analyze_sync_test_dataset_fluor.py  analyze_vessel_scan_dataset.py  analyze_vyt_13_jun.py  analyze_vytautas_sept_dataset.py  annotate_dataset_using_brightfield.py  annotate_from_brightfield_script.py  annotate_sync_test_dataset_em_cam.py  annotation.py  average_alex_images.py  cache_all_brightfield.py  clean_phases.py  drift_correction.py  evaluate_realtime_dispersion.py  external scripts.txt  image_class.py  image_loading.py  image_processing.py  image_saving.py  liebling segmentation.ipynb  maintain_ref_frame_alignment.py  memoryCC.py  pca_compressive_py3.ipynb  periods.py  phase_assignment.py  phase_wrap_interp_test.ipynb  phase_wrap_interpolation.py  (+9 more)
open_optical_gating/: __init__.py
open_optical_gating/app/: app.py  base_camera.py  camera_pi.py
open_optical_gating/app/retrospective_log_scraping/: log_keys.json  scrape_and_plot.py
open_optical_gating/app/retrospective_log_scraping/helper_functions/: log_scraper.py  phase_interpolator.py  plot_maker.py
open_optical_gating/app/static/: form.css
open_optical_gating/app/templates/: bad_log.html  base.html  emulate.html  index.html  live.html  parameters.html  post_sync.html  settings.html
open_optical_gating/cli/: __init__.py  check_stage.py  check_trigger.py  cli.py  determine_reference_period.py  emulate.py  file_optical_gater.py  jps_placeholder.py  kalman_filter.py  kalman_optical_gater.py  optical_gater_server.py  parameters.py  pi_optical_gater.py  pi_optical_gater_app.py  pixelarray.py  pog_settings.py  prospective_optical_gating.py  sockets_comms.py  stage_check.py  stage_control_functions.py  synthetic_optical_gater.py  trigger_check.py  websocket_example_client.py  websocket_example_server.py  websocket_loopback_server.py  websocket_optical_gater.py  websockets_example_client.py  websockets_example_server.py
open_optical_gating/server/templates/: test.html
optical_gating_data/: default_settings.json  example_data_settings.json  json_format_description.md  kalman_data_settings.json  kf_test_settings.json  pi_default_settings.json  pi_settings.json  synthetic_data_settings.json
period_data/: 0.tiff  1.tiff  10.tiff  11.tiff  12.tiff  13.tiff  14.tiff  15.tiff  16.tiff  17.tiff  18.tiff  19.tiff  2.tiff  20.tiff  21.tiff  22.tiff  23.tiff  24.tiff  25.tiff  26.tiff  27.tiff  3.tiff  4.tiff  5.tiff  6.tiff  7.tiff  8.tiff  9.tiff
picam-analysis/: Frame rate analysis.ipynb  PiRGBArray_test.py  avgtime.py  imagesaver.py  maxfps_plot.py  multicap.py  npcap.py  strip_plot.py  type_capture.py
picam-analysis/data/: time-stamp-10-50-100.csv
pulse-analysis/: GPIO_Pulse.py  QIClick_test.py  c_times  data_analysis.py  gpio_test.py  hist-nanosleep-10000-0-1-1.csv  hist-nanosleep-10000-500000-5000000-100000.csv  makefile  peaks-Pi3-histdata-0.0005-0.005-0.0001-10000.csv  time_test.c  time_test.py
pulse-analysis/data/: histdata-0.0-1.0-1.0-10000.csv  peaks-Pi2-histdata-0.0005-0.005-0.0001-10000.csv
retrospective_log_scraping/: log_keys.json  readme.md  scrape_and_plot.py
retrospective_log_scraping/helper_functions/: log_scraper.py  phase_interpolator.py  plot_maker.py
templates/: .styling.html.swp  base.html  capture.html  styling.html
(+7 files in other folders)
