[tool.poetry]
name = "open-optical-gating"
version = "2.0.0"
description = ""
authors = ["Chas Nelson <chas.nelson@glasgow.ac.uk>"]

[tool.poetry.dependencies]
python = "^3.5"
optical-gating-alignment = { git = "https://github.com/Glasgow-ICG/optical-gating-alignment" }
j_py_sad_correlation = { git = "https://bitbucket.org/jmtaylor/py_sad_correlation" }
loguru = "^0.4.1"
tqdm = "^4.45.0"
tifffile = "^2019.7.26"
serial = "^0.0.97"
flask = "^1.1.2"
matplotlib = "^3.0.3"

# JT: Work around a serious bug on Windows (http://tinyurl.com/y3dm3h86)
# I am not sure if/how I can specify a different version if *not* running Windows -
# it seems to complain about a duplicate key. But fortunately numpy gets installed via
# other dependencies, so hopefully that won't be an issue
numpy = {version = "1.19.3", platform = "Windows"}
#numpy = {version = "*", platform = "~Windows"}

# Socket Specific
#orjson = { version = "^3.4.5", optional = true }
#  JT: note that orjson v2 seems to have problems on Windows (https://github.com/readthedocs/readthedocs.org/issues/7313)
#      which may, from the sound of that issue report, go away with version 3.
#      However, I don't actively use orjson at the moment, so I have instead worked around by just removing it as a 'socket' dependency, below.
cbor = { version = "^1.0.0" }
websockets = { version = "^7.0" }

# Numba for optical gating (not on Pi)
numba = { version = "^0.41.0", optional = true}

# RPi Specific
picamera = { version = "^1.13", optional = true}
fastpins = { git = "https://github.com/abdrysdale/fastpins",  optional = true}
pybase64 = "^1.0.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
# JT: disabled 'black' because it does not seem to be compatible at all with python 3.5.
# Even though black is optional here, 'poetry lock' won't run at all because of that incompatibility
#black = {version = "19.3b0", allows-prereleases = true}
pytest-cov = "^2.8.1"
pylint = "^2.4.4"

[tool.poetry.extras]
numba = ["numba"]
rpi = ["picamera", "fastpins"]

[build-system]
# Bug in setuptools v50 breaks installation
# (https://stackoverflow.com/questions/63683262/modulenotfounderror-no-module-named-setuptools-distutils)
requires = ["poetry>=0.12", "setuptools!=50.0"]
build-backend = "poetry.masonry.api"
